k8s/cluster/apps/network/external-services/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app files
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: "${NAS_ADDRESS}"
  ports:
    - name: http
      port: &port 7001
      protocol: TCP
      targetPort: *port
